Prepare portfolio for production deployment

--- a/index.html
+++ b/index.html
@@ -3,7 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Interactive Engineer portfolio showcasing UX, UI, and JavaScript depth.">
+  <meta name="description" content="Interactive Engineer portfolio by Zeyad Elmaghraby showcasing UX, UI, and JavaScript depth.">
+  <meta name="author" content="Zeyad Elmaghraby">
+  <meta name="theme-color" content="#0c0f18">
+  <meta name="robots" content="index,follow">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Interactive Engineer Portfolio - Zeyad Elmaghraby">
+  <meta property="og:description" content="Single-page portfolio highlighting coding depth, UX thinking, UI craft, and live JavaScript demos.">
+  <meta property="og:url" content="https://zeyadelmaghraby.github.io/interactive-engineer-portfolio/">
+  <meta property="og:image" content="https://zeyadelmaghraby.github.io/interactive-engineer-portfolio/assets/og-preview.png">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Interactive Engineer Portfolio - Zeyad Elmaghraby">
+  <meta name="twitter:description" content="UX + UI + JavaScript portfolio with interactive demos and project case studies.">
+  <meta name="twitter:image" content="https://zeyadelmaghraby.github.io/interactive-engineer-portfolio/assets/og-preview.png">
+  <link rel="canonical" href="https://zeyadelmaghraby.github.io/interactive-engineer-portfolio/">
+  <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
   <title>Interactive Engineer — Zeyad</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,7 +33,7 @@
     <nav class="nav">
       <div class="brand">Zeyad / Interactive Engineer</div>
       <button class="icon-btn" id="themeToggle" aria-label="Toggle theme">🌓</button>
-      <button class="icon-btn" id="navToggle" aria-label="Toggle navigation">☰</button>
+      <button class="icon-btn" id="navToggle" aria-label="Toggle navigation" aria-expanded="false">☰</button>
       <ul class="nav-links" id="navLinks">
         <li><a href="#hero">Home</a></li>
         <li><a href="#projects">Projects</a></li>
@@ -38,8 +52,8 @@
         <h1 id="hero-title">I build purposeful experiences with sharp UI and resilient code.</h1>
         <p class="lede">Blending UX intuition, visual craft, and modern JavaScript to ship interfaces that feel inevitable.</p>
         <div class="cta-row">
-          <a class="btn primary" href="mailto:zeyad@example.com">Start a project</a>
-          <a class="btn ghost" href="https://github.com/zeyad" target="_blank" rel="noopener">GitHub</a>
+          <a class="btn primary" href="mailto:zeyad.elmaghraby@gmail.com">Start a project</a>
+          <a class="btn ghost" href="https://github.com/zeyadelmaghraby" target="_blank" rel="noopener noreferrer">GitHub</a>
           <a class="btn ghost" href="#projects">See work</a>
         </div>
       </div>
@@ -95,7 +109,7 @@
             <p><strong>Approach:</strong> Token-driven system, accessibility baselines, CI visual diffs.</p>
             <p><strong>Result:</strong> 35% faster feature delivery; <strong>92</strong> Lighthouse a11y baseline.</p>
             <p class="tags">Tags: Design tokens, Storybook, Lint rules</p>
-            <a class="text-link" href="#" aria-label="View Northstar repo">View repo ↗</a>
+            <a class="text-link" href="https://github.com/zeyadelmaghraby/interactive-engineer-portfolio" target="_blank" rel="noopener noreferrer" aria-label="View Northstar repo">View repo ↗</a>
           </div>
         </article>
 
@@ -113,7 +127,7 @@
             <p><strong>Approach:</strong> Stream processing, signal scoring, humane alert UX.</p>
             <p><strong>Result:</strong> 48% alert reduction; mean-time-to-action dropped to 3m.</p>
             <p class="tags">Tags: WebSockets, D3, UX writing</p>
-            <a class="text-link" href="#" aria-label="View Insight Loop repo">View repo ↗</a>
+            <a class="text-link" href="https://github.com/zeyadelmaghraby/interactive-engineer-portfolio" target="_blank" rel="noopener noreferrer" aria-label="View Insight Loop repo">View repo ↗</a>
           </div>
         </article>
 
@@ -131,7 +145,7 @@
             <p><strong>Approach:</strong> Progressive disclosure, optimistic UI, skeleton loading.</p>
             <p><strong>Result:</strong> +14% conversion; -22% support tickets.</p>
             <p class="tags">Tags: Performance, Forms, Animations</p>
-            <a class="text-link" href="#" aria-label="View FlowPay repo">View repo ↗</a>
+            <a class="text-link" href="https://github.com/zeyadelmaghraby/interactive-engineer-portfolio" target="_blank" rel="noopener noreferrer" aria-label="View FlowPay repo">View repo ↗</a>
           </div>
         </article>
       </div>
@@ -244,14 +258,13 @@
       </div>
       <div class="contact__grid">
         <div>
-          <p class="mono">zeyad@example.com</p>
+          <p class="mono">zeyad.elmaghraby@gmail.com</p>
           <button class="btn primary" id="copyEmail">Copy email</button>
           <div id="copyToast" role="status" aria-live="polite"></div>
         </div>
         <div class="social">
-          <a class="text-link" href="https://github.com/zeyad" target="_blank" rel="noopener">GitHub</a>
-          <a class="text-link" href="#" target="_blank" rel="noopener">Resume</a>
-          <a class="text-link" href="https://www.linkedin.com" target="_blank" rel="noopener">LinkedIn</a>
+          <a class="text-link" href="https://github.com/zeyadelmaghraby" target="_blank" rel="noopener noreferrer">GitHub</a>
+          <a class="text-link" href="https://www.linkedin.com/in/zeyadelmaghraby/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
         </div>
       </div>
     </section>
