Update experience to 8+ years

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <section id="signal" class="section signal-bar" aria-label="Key stats">
       <div class="stat">
         <div class="stat__label">Experience</div>
-        <div class="stat__value">7 yrs</div>
+        <div class="stat__value">8+ yrs</div>
       </div>
       <div class="stat">
         <div class="stat__label">Specialties</div>
